using enhanced switch and pattern variables